tests/profile/error/module/wrongtype_name.profile
{
  "version": { "major": 12, "minor": 13 },
  "modules": [
    {
      "name": 1.0,
      "loadedInstruction": "instr",
      "notLoadedInstruction": "not_instr"
    }
  ]
}
